--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -307,5 +307,13 @@
   "exception.payment_exception.payment_in_progress_exception": "Another payment has already been reported and is currently pending confirmation",
   "exception.payment_exception.course_overpaid_exception": "Value of payments exceeds price of the course",
 
-  "navigation.bar.payments.for.approval": "Payments for approval"
+  "confirm/reject": "Confirm/Reject",
+  "navigation.bar.payments.for.approval": "Payments for approval",
+  "edit.payment.confirm.success": "Payment has been successfully confirmed",
+  "edit.payment": "Edit payment",
+  "edit.payment.title": "Confirm/Reject payment",
+  "edit.payment.comment.not.required": "Comment is optional",
+  "edit.payment.reject.success": "Payment has been successfully rejected",
+  "edit.payment.confirm": "Confirm payment",
+  "edit.payment.reject": "Reject payment"
 }
