--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -117,7 +117,7 @@
   "navigation.bar.accounts.list": "Account list",
   "navigation.bar.payments": "Payments",
   "navigation.bar.reported.payments": "Reported payments",
-  "navigation.bar.add.payment": "Add payment",
+  "navigation.bar.underpayments": "Underpayments",
   "navigation.bar.generate.report": "Generate report",
   "navigation.bar.timetable": "Timetable",
   "navigation.bar.lecture.groups": "Lecture groups",
@@ -315,5 +315,9 @@
   "edit.payment.comment.not.required": "Comment is optional",
   "edit.payment.reject.success": "Payment has been successfully rejected",
   "edit.payment.confirm": "Confirm payment",
-  "edit.payment.reject": "Reject payment"
+  "edit.payment.reject": "Reject payment",
+
+  "underpayments.title": "Accounts with underpayment",
+  "underpayments.fetch.success": "Category has been successfully changed",
+  "underpayments.add.payment": "Add payment"
 }
