--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -117,7 +117,7 @@
   "navigation.bar.accounts.list": "Lista kont",
   "navigation.bar.payments": "Wpłaty",
   "navigation.bar.reported.payments": "Zgłoszone wpłaty",
-  "navigation.bar.add.payment": "Dodaj wpłatę",
+  "navigation.bar.underpayments": "Niedopłaty",
   "navigation.bar.generate.report": "Generuj raport",
   "navigation.bar.timetable": "Terminarz",
   "navigation.bar.lecture.groups": "Grupy wykładowe",
@@ -315,5 +315,9 @@
   "edit.payment.reject.success": "Wpłata została pomyślnie odrzucona",
   "edit.payment.comment.not.required": "Komentarz jest opcjonalny",
   "edit.payment.confirm": "Zatwierdź wpłatę",
-  "edit.payment.reject": "Odrzuć wpłatę"
+  "edit.payment.reject": "Odrzuć wpłatę",
+
+  "underpayments.title": "Konta z niedopłatą",
+  "underpayments.fetch.success": "Kategoria została pomyślnie zmieniona",
+  "underpayments.add.payment": "Dodaj płatność"
 }
