Minor fixes in getGroupCalendar

--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -374,7 +374,7 @@
   "add.lecture.display.calendar": "Display calendar",
   "add.lecture.begin.date": "Choose any day from the week you are interested in",
   "lecture.groups.previous.week": "Previous week",
-  "lecture.groups.next.week": "Next week",
+  "lecture.groups.next.week": "Following week",
   "lecture.groups.change.week.success": "Date has been changed",
   "monday": "Monday",
   "tuesday": "Tuesday",
