--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -372,10 +372,14 @@
   "instructors.statistics.chart.practical.title": "Number of practical hours",
 
   "add.lecture.display.calendar": "Display calendar",
-  "add.lecture.begin.date": "Choose any day from the week you are interested in",
-  "lecture.groups.previous.week": "Previous week",
-  "lecture.groups.next.week": "Following week",
-  "lecture.groups.change.week.success": "Date has been changed",
+  "add.lecture.previous.week": "Previous week",
+  "add.lecture.next.week": "Following week",
+  "add.lecture.change.week.success": "Date has been changed",
+  "add.lecture.begin.date": "beginning",
+  "add.lecture.end.date": "end",
+  "add.lecture.instructor": "instructor",
+  "LECTURE": "Lecture",
+
   "monday": "Monday",
   "tuesday": "Tuesday",
   "wednesday": "Wednesday",
