--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -378,6 +378,12 @@
   "add.lecture.begin.date": "beginning",
   "add.lecture.end.date": "end",
   "add.lecture.instructor": "instructor",
+  "add.lecture.add.lecture": "Add lecture",
+  "add.lecture.add.start.date": "Start date",
+  "add.lecture.add.end.date": "End date",
+  "add.lecture.select.instructor": "Select instructor",
+  "add.lecture.no.instructor.selected": "Instructor was not selected",
+  "add.lecture.success": "Lecture has been successfully added",
   "LECTURE": "Lecture",
 
   "monday": "Monday",
@@ -386,5 +392,11 @@
   "thursday": "Thursday",
   "friday": "Friday",
   "saturday": "Saturday",
-  "sunday": "Sunday"
+  "sunday": "Sunday",
+
+  "exception.lecture_group_exception.invalid_date_range_exception": "The entered date is incorrect",
+  "exception.lecture_group_exception.time_for_adding_exceeded_exception": "Lectures must be added to the calendar 72 hours before they start",
+  "exception.lecture_group_exception.no_permits_exception": "Instructor does not have permissions to conduct classes in this category",
+  "exception.lecture_group_exception.date_ranges_overlap_exception": "The group or instructor already has classes on this date",
+  "exception.lecture_group_exception.too_many_lecture_hours_exception": "The number of lectures for the group has been exceeded"
 }
