Add Driving Lesson implemented

--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -406,5 +406,13 @@
   "timetable.show.instructor.calendar": "Instructor calendar",
   "timetable.show.trainee.calendar": "Trainee calendar",
   "timetable.group": "group",
-  "timetable.trainee": "trainee"
+  "timetable.trainee": "trainee",
+  "timetable.add.driving.lesson.success": "Driving lesson has been successfully added",
+
+  "exception.driving_lesson_exception.conditions_not_met_exception": "Trainee does not meet the conditions",
+  "exception.driving_lesson_exception.time_for_adding_exceeded_exception": "Driving lessons must be booked at least 3 days in advance",
+  "exception.driving_lesson_exception.invalid_date_range_exception": "Driving lessons must take place from Monday to Saturday from 8 am to 4 pm",
+  "exception.driving_lesson_exception.no_permits_exception": "The instructor does not have the appropriate permissions",
+  "exception.driving_lesson_exception.date_ranges_overlap_exception": "The trainee or instructor has this date already taken",
+  "exception.driving_lesson_exception.too_many_driving_hours_exception": "The number of driving lessons has been exceeded"
 }
