--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -406,5 +406,13 @@
   "timetable.show.instructor.calendar": "Kalendarz instruktora",
   "timetable.show.trainee.calendar": "Kalendarz kursanta",
   "timetable.group": "grupa",
-  "timetable.trainee": "kursant"
+  "timetable.trainee": "kursant",
+  "timetable.add.driving.lesson.success": "Jazdy zostały pomyślnie dodane",
+
+  "exception.driving_lesson_exception.conditions_not_met_exception": "Kursant nie spełnia wymagań",
+  "exception.driving_lesson_exception.time_for_adding_exceeded_exception": "Jazdy muszą być rezerwowane z minimum 3 dniowym wyprzedzeniem",
+  "exception.driving_lesson_exception.invalid_date_range_exception": "Jazdy muszą się odbywać od poniedziałku do soboty w godzinach 8 - 16",
+  "exception.driving_lesson_exception.no_permits_exception": "Instruktor nie ma odpowiednich uprawnień",
+  "exception.driving_lesson_exception.date_ranges_overlap_exception": "Kursant lub instruktor ma zajęty termin",
+  "exception.driving_lesson_exception.too_many_driving_hours_exception": "Liczba jazd została przekroczona"
 }
